feature - endpoint implemented to create a post
