# controllers/v1/post.controller.js
@@ -1,0 +1,26 @@
+const postService = require('../../services/v1/post.service');
+
+const postController = {
+  create: async (req, res, next) => {
+    try {
+      const userId = req.user.id;
+      const postData = ({ title, content, countryId, visitDate } = req.body);
+      postData.userId = userId;
+
+      const response = await postService.createNewPost(postData);
+      const { success, status, data } = response;
+
+      res.status(status).json({
+        success: success,
+        response: {
+          status: status,
+          data: data,
+        },
+      });
+    } catch (error) {
+      next(error);
+    }
+  },
+};
+
+module.exports = postController;
