# routes/v1/post.routes.js
@@ -1,0 +1,10 @@
+const express = require('express');
+const authenticate = require('../../middleware/auth/authenticate');
+const postController = require('../../controllers/v1/post.controller');
+
+const postRouter = express.Router();
+postRouter.use(authenticate);
+
+postRouter.post('/', postController.create);
+
+module.exports = postRouter;
